# pingpong2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  TODO.txt  todo.txt
src/: ball.hpp  game.cpp  game.hpp  game_object.hpp  glad.c  main.cpp  player.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp
src/engine/: logger.cpp  logger.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  text_rendering.cpp  text_rendering.hpp
src/game/: ball.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  player.hpp
src/includes/: glfw3.h  glfw3native.h
src/includes/glad/: glad.h
src/shaders/: shader.vs  shader_ball.fs  shader_ball.vs
